# opensn0w

./: .gitignore  INSTALL  Makefile  README.md  TODO  autogen.sh  buildsys.mk.in  configure.ac  extra.mk.in
bundles/: AppleTV2,1_4.1_8M89.plist  AppleTV2,1_4.2.1_8C154.plist  AppleTV2,1_4.2_8C150.plist  AppleTV2,1_4.3_8F191m.plist  AppleTV2,1_4.3_8F202.plist  AppleTV2,1_4.3_8F305.plist  AppleTV2,1_4.3_8F455.plist  AppleTV2,1_4.3_8F5148c.plist  AppleTV2,1_5.0.1_9A405l.plist  AppleTV2,1_5.0.1_9A406a.plist  AppleTV2,1_5.0_9A334v.plist  AppleTV2,1_5.0_9A335a.plist  AppleTV2,1_5.0_9A336a.plist  AppleTV2,1_5.1.1_9B206f.plist  AppleTV2,1_5.1_9B179b.plist  iPad1,1_3.2.1_7B405.plist  iPad1,1_3.2.2_7B500.plist  iPad1,1_3.2_7B367.plist  iPad1,1_4.2.1_8C148.plist  iPad1,1_4.2_8C134.plist  iPad1,1_4.2_8C134b.plist  iPad1,1_4.2_8C5115c.plist  iPad1,1_4.3.1_8G4.plist  iPad1,1_4.3.2_8H7.plist  iPad1,1_4.3.3_8J3.plist  iPad1,1_4.3.4_8K2.plist  iPad1,1_4.3.5_8L1.plist  iPad1,1_4.3_8F190.plist  iPad1,1_4.3_8F5148b.plist  iPad1,1_5.0.1_9A405.plist  iPad1,1_5.0_9A334.plist  iPad1,1_5.1.1_9B206.plist  iPad2,1_4.3.1_8G4.plist  iPad2,1_4.3.2_8H7.plist  iPad2,1_4.3.3_8J2.plist  iPad2,1_4.3.4_8K2.plist  iPad2,1_4.3.5_8L1.plist  iPad2,1_4.3_8F191.plist  iPad2,1_5.0.1_9A405.plist  iPad2,1_5.0_9A334.plist  (+156 more)
include/: abirev.h  config.h  config.h.in  config_file.h  core.h  crt.h  dprint.h  exploits.h  firmware.h  glib_shim.h  libirecovery.h  libpartial.h  module.h  patch.h  platform.h  sn0wcore_public.h  tools.h  types.h  util.h  version.h  warning.h
include/messages/: usa.h
include/xpwntool/: common.h
include/xpwntool/dmg/: dmg.h
include/xpwntool/hfs/: hfscompress.h  hfsplus.h
include/xpwntool/xpwn/: 8900.h  ibootim.h  img2.h  img3.h  libxpwn.h  lzssfile.h  plist.h  pwnutil.h
libsn0wcore/: 8900.c  Makefile  abstractfile.c  aes.c  arm.c  base64.c  config.c  config_file.c  core_objects.c  device.c  exploit_list.c  img2.c  img3.c  jailbreak.c  libirecovery.c  libpartial.c  list.c  loader_posix.c  loader_win32.c  lzss.c  lzssfile.c  module.c  nor_files.c  patch.c  patch_file.c  plist.c  portable_crt.c  public_api.c  shell.c  tools.c  util.c
m4/: buildsys.m4
modules/: Makefile
modules/limera1n/: Makefile  limera1n.c  payload.h
modules/steaks4uce/: Makefile  steaks4uce.c
prebuilt/: README
ramdisk/files/: fstab_gpt  fstab_old  nvram
ramdisk/sbin/: launchd
src/: Makefile
src/opensn0w_cli/: Makefile  main.c
src/opensn0w_new_api_example/: Makefile  main.c
